<?xml version="1.0" encoding="UTF-8"?>
<project
  xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
>
  <modelVersion>4.0.0</modelVersion>

  <!-- The Basics -->
  <groupId>org.seasar.container</groupId>
  <artifactId>s2-container-project</artifactId>
  <version>2.4.49-SNAPSHOT</version>
  <packaging>pom</packaging>
  <modules>
    <module>s2-framework</module>
    <module>s2-extension</module>
    <module>s2-dist</module>
  </modules>

  <!-- More Project Information -->
  <name>Seasar2</name>
  <description>DI Container with AOP</description>
  <url>http://s2container.seasar.org/</url>
  <inceptionYear>2004</inceptionYear>
  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <organization>
    <name>The Seasar Foundation</name>
    <url>http://www.seasarfoundation.org/</url>
  </organization>
  <developers>
    <developer>
      <id>higa</id>
      <name>HIGA Yasuo</name>
      <email>higa_at_isid.co.jp</email>
      <url>http://d.hatena.ne.jp/higayasuo/</url>
      <organization></organization>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>taichi_sato</id>
      <name>SATO Taichi</name>
      <email></email>
      <url>http://d.hatena.ne.jp/taichitaichi/</url>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>koichik</id>
      <name>KOBAYASHI Koichi</name>
      <email></email>
      <url>http://d.hatena.ne.jp/koichik/</url>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>skirnir</id>
      <name>YOKOTA Takehiko</name>
      <email></email>
      <url>http://kvasir.skirnir.net/diary/</url>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>manhole</id>
      <name>HONMA Hirotaka</name>
      <email>manholex_at_gmail.com</email>
      <url></url>
      <organization>ARK Systems Co., Ltd.</organization>
      <organizationUrl>http://www.arksystems.co.jp/</organizationUrl>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>y-komori</id>
      <name>KOMORI Yusuke</name>
      <email>komo_at_littleforest.jp</email>
      <url>http://d.hatena.ne.jp/y-komori/</url>
      <organization>SMG Co., Ltd.</organization>
      <organizationUrl>http://www.smg.co.jp/</organizationUrl>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>shot</id>
      <name>Shinpei Ohtani</name>
      <email>shinpei.ohtani_at_gmail.com</email>
      <url>http://d.hatena.ne.jp/shot6/</url>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>shinsuke</id>
      <name>Shinsuke Sugaya</name>
      <email>shinsuke_at_yahoo.co.jp</email>
      <url>http://d.hatena.ne.jp/shinsuke_sugaya/</url>
      <organization/>
      <organizationUrl/>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>taedium</id>
      <name>NAKAMURA Toshihiro</name>
      <email></email>
      <url>http://d.hatena.ne.jp/taedium/</url>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>yone</id>
      <name>Masaaki Yonebayashi</name>
      <email>yone098_at_gmail.com</email>
      <organization>Abby Co., Ltd.</organization>
      <organizationUrl>http://www.abby.co.jp/</organizationUrl>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>mopemope</id>
      <name>mopemope</name>
      <url>http://d.hatena.ne.jp/mopemope/</url>
      <timezone>+9</timezone>
    </developer>

    <developer>
      <id>jundu</id>
      <name></name>
      <email></email>
      <url></url>
      <roles>
        <role>Javadoc</role>
      </roles>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>goto</id>
      <name></name>
      <email></email>
      <url></url>
      <roles>
        <role>Javadoc</role>
      </roles>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>vestige</id>
      <name></name>
      <email></email>
      <url></url>
      <roles>
        <role>Javadoc</role>
      </roles>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>belltree</id>
      <name></name>
      <email></email>
      <url></url>
      <roles>
        <role>Javadoc</role>
      </roles>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>azusa</id>
      <name></name>
      <email></email>
      <url></url>
      <roles>
        <role>Javadoc</role>
      </roles>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>maeno</id>
      <name></name>
      <email></email>
      <url></url>
      <roles>
        <role>Javadoc</role>
      </roles>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>nomadmonad</id>
      <name></name>
      <email></email>
      <url></url>
      <roles>
        <role>Javadoc</role>
      </roles>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>yatsu</id>
      <name></name>
      <email></email>
      <url></url>
      <roles>
        <role>Javadoc</role>
      </roles>
      <timezone>+9</timezone>
    </developer>
  </developers>
  <contributors>
    <contributor>
      <name>KAKUTANI Shintaro</name>
      <url>http://www.kakutani.com/</url>
    </contributor>
    <contributor>
      <name>FUKUZAWA Susumu</name>
    </contributor>
    <contributor>
      <name>KUDO Kazuki</name>
    </contributor>
    <contributor>
      <name>ERIGUCHI On</name>
    </contributor>
    <contributor>
    	<name>UESHIN Takuya</name>
    </contributor>
    <contributor>
    	<name>BABA,Yasuyuki</name>
    </contributor>
    <contributor>
    	<name>YAMANAKA Kota</name>
    </contributor>
    <contributor>
    	<name>Yokoyama Hideaki</name>
    </contributor>
    <contributor>
      <name>PPOI</name>
      <url>http://softlab.tsukuba-bunko.org/</url>
    </contributor>
    <contributor>
      <name>Kan Ogawa</name>
    </contributor>
    <contributor>
      <name>Kentaro Ohkouchi</name>
    </contributor>
    <contributor>
      <name>Jun Futagawa</name>
    </contributor>
    <contributor>
      <name>Taichi Uragami</name>
    </contributor>
  </contributors>

  <!-- Environment Settings -->
  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/seasarorg/seasar2/issues</url>
  </issueManagement>
  <mailingLists>
    <mailingList>
      <name>Seasar-user</name>
      <subscribe>https://www.seasar.org/mailman/listinfo/seasar-user</subscribe>
      <unsubscribe>https://www.seasar.org/mailman/listinfo/seasar-user</unsubscribe>
      <post>seasar-user@ml.seasar.org</post>
      <archive>https://www.seasar.org/mailman/listinfo/seasar-user</archive>
    </mailingList>
    <mailingList>
      <name>Seasar-dev</name>
      <subscribe>https://www.seasar.org/mailman/listinfo/seasar-dev</subscribe>
      <unsubscribe>https://www.seasar.org/mailman/listinfo/seasar-dev</unsubscribe>
      <post>seasar-dev@ml.seasar.org</post>
      <archive>https://www.seasar.org/mailman/listinfo/seasar-dev</archive>
    </mailingList>
    <mailingList>
      <name>Seasar-user-en</name>
      <subscribe>https://www.seasar.org/mailman/listinfo/seasar-user-en</subscribe>
      <unsubscribe>https://www.seasar.org/mailman/listinfo/seasar-user-en</unsubscribe>
      <post>seasar-user-en@ml.seasar.org</post>
      <archive>http://ml.seasar.org/archives/seasar-user-en/</archive>
    </mailingList>
  </mailingLists>
  <scm>
    <connection>scm:git:git@github.com:seasarorg/seasar2.git</connection>
    <developerConnection>scm:git:git@github.com:seasarorg/seasar2.git</developerConnection>
    <url>git@github.com:seasarorg/seasar2.git</url>
  </scm>
  <distributionManagement>
    <repository>
      <uniqueVersion>false</uniqueVersion>
      <id>maven.seasar.org</id>
      <name>The Seasar Foundation Maven2 Repository</name>
      <url>dav:https://www.seasar.org/maven/maven2</url>
    </repository>
    <snapshotRepository>
      <uniqueVersion>true</uniqueVersion>
      <id>maven.seasar.org</id>
      <name>The Seasar Foundation Maven2 Snapshot Repository</name>
      <url>dav:https://www.seasar.org/maven/maven2-snapshot</url>
    </snapshotRepository>
    <site>
      <id>maven.seasar.org</id>
      <url>dav:https://www.seasar.org/site/s2container/2.4</url>
    </site>
  </distributionManagement>

  <!-- Build Settings -->
  <build>
    <defaultGoal>validate</defaultGoal>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <source>1.8</source>
            <target>1.8</target>
            <encoding>UTF-8</encoding>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <configuration>
            <updateReleaseInfo>true</updateReleaseInfo>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <configuration>
            <locales>en,ja</locales>
            <inputEncoding>UTF-8</inputEncoding>
            <outputEncoding>UTF-8</outputEncoding>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.2.5</version>
          <configuration>
            <argLine>-Djava.locale.providers=CLDR,JRE -Duser.timezone=Asia/Tokyo -Duser.language=ja -Duser.country=JP -Dfile.encoding=UTF-8</argLine>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <id>source-jar</id>
            <phase>package</phase>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <encoding>UTF-8</encoding>
          <docencoding>UTF-8</docencoding>
          <charset>UTF-8</charset>
          <links>
            <link>https://download.oracle.com/javaee/6/api/</link>
          	<link>https://java.sun.com/javase/6/docs/api/</link>
            <link>https://aopalliance.sourceforge.net/doc/</link>
            <link>https://jakarta.apache.org/commons/logging/apidocs/</link>
            <link>https://www.csg.is.titech.ac.jp/~chiba/javassist/html/</link>
            <link>https://www.opensymphony.com/ognl/api/</link>
            <link>https://www.junit.org/junit/javadoc/4.4/</link>
            <link>https://www.junit.org/junit/javadoc/3.8.1/</link>
            <link>https://s2container.seasar.org/2.4/s2-framework/ja/apidocs/</link>
            <link>https://s2container.seasar.org/2.4/s2-extension/ja/apidocs/</link>
            <link>https://s2container.seasar.org/2.4/s2-tiger/ja/apidocs/</link>
          </links>
        </configuration>
        <executions>
          <execution>
            <phase>site</phase>
            <goals>
              <goal>javadoc</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>1.8</version>
        <executions>
          <execution>
            <id>ant-dist</id>
            <phase>site</phase>
            <configuration>
              <tasks>
                <ant antfile="build.xml" target="dist">
                  <property name="ver" value="${version}"/>
                </ant>
              </tasks>
            </configuration>
            <goals>
              <goal>run</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>com.google.code.maven-license-plugin</groupId>
        <artifactId>maven-license-plugin</artifactId>
        <version>1.4.0</version>
        <configuration>
          <header>https://www.seasar.org/license/header.txt</header>
          <includes>
            <include>src/**/*.java</include>
          </includes>
          <encoding>UTF-8</encoding>
          <headerDefinitions>
            <headerDefinition>https://www.seasar.org/license/header-definition.xml</headerDefinition>
          </headerDefinitions>
        </configuration>
      </plugin>
    </plugins>
    <extensions>
      <extension>
        <groupId>org.apache.maven.wagon</groupId>
        <artifactId>wagon-webdav</artifactId>
        <version>1.0-beta-2</version>
      </extension>
    </extensions>
  </build>

  <!-- Dependency Settings -->
  <dependencies>
    <dependency>
      <groupId>org.apache.geronimo.specs</groupId>
      <artifactId>geronimo-j2ee_1.4_spec</artifactId>
      <version>1.0</version>
      <type>jar</type>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.geronimo.specs</groupId>
      <artifactId>geronimo-jta_1.1_spec</artifactId>
      <version>1.0</version>
      <type>jar</type>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>portlet-api</groupId>
      <artifactId>portlet-api</artifactId>
      <version>1.0</version>
      <type>jar</type>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.13</version>
      <type>jar</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>hsqldb</groupId>
      <artifactId>hsqldb</artifactId>
      <version>1.8.0.1</version>
      <type>jar</type>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <!-- Profiles -->
  <profiles>
    <!--
      JDK 9+ requires the add-opens JVM options to allow the framework's
      reflective access to JDK internals (used for bytecode manipulation / AOP).
      The flags are intentionally NOT applied on Java 8, which rejects
      the add-opens JVM option and would fail surefire startup.
    -->
    <profile>
      <id>jdk9plus</id>
      <activation>
        <jdk>[9,)</jdk>
      </activation>
      <build>
        <pluginManagement>
          <plugins>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-surefire-plugin</artifactId>
              <version>3.2.5</version>
              <configuration>
                <argLine>-Dfile.encoding=UTF-8 --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.text=ALL-UNNAMED -Djava.locale.providers=CLDR,JRE -Duser.timezone=Asia/Tokyo -Duser.language=ja -Duser.country=JP</argLine>
              </configuration>
            </plugin>
          </plugins>
        </pluginManagement>
      </build>
    </profile>
    <profile>
      <id>java17-plus-surefire</id>
      <activation>
        <jdk>[17,)</jdk>
      </activation>
      <build>
        <pluginManagement>
          <plugins>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-surefire-plugin</artifactId>
              <configuration>
                <argLine>
                  --add-opens=java.base/java.math=ALL-UNNAMED
                  --add-opens=java.base/java.net=ALL-UNNAMED
                  --add-opens=java.base/java.lang=ALL-UNNAMED
                  --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
                  --add-opens=java.base/java.util=ALL-UNNAMED
                  --add-opens=java.base/java.text=ALL-UNNAMED
                  --add-opens=java.base/java.io=ALL-UNNAMED
                  -Djava.locale.providers=CLDR,JRE
                  -Duser.timezone=Asia/Tokyo
                  -Duser.language=ja
                  -Duser.country=JP
                  -Dfile.encoding=UTF-8
                </argLine>
              </configuration>
            </plugin>
          </plugins>
        </pluginManagement>
      </build>
    </profile>
  </profiles>
</project>
